Bug 172034 - terminal panel doesn't remember the profile setting
Summary: terminal panel doesn't remember the profile setting
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-10-02 14:32 UTC by Zauberer von Oz
Modified: 2009-03-31 10:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zauberer von Oz 2008-10-02 14:32:19 UTC
Version:           1.1 (using 4.1.1 (KDE 4.1.1), 4.1.1-12.fc9 Fedora)
Compiler:          gcc
OS:                Linux (i686) release 2.6.25-14.fc9.i686

When right-clicking the terminal panel, one can change the profile used. Before I can do so, first I have to manage my profiles, activating any KDE konsole profile via the context menu, too. That's all fine.

After I have closed the dolphin app and restarted it, the same procedure is required. The terminal panel hasn't remembered my settings.
Comment 1 FiNeX 2008-11-14 14:31:09 UTC
Confirmed: it is loaded the default profile and not the selected one.
Comment 2 Rahman Duran 2009-03-28 21:33:22 UTC
The reason of the bug: 
KSharedConfigPtr appConfig = KGlobal::config();
    const KConfigGroup group = appConfig->group( "Desktop Entry" );
    QString defaultSessionFilename = group.readEntry("DefaultProfile","Shell.profile");

in this code "KSharedConfigPtr appConfig = KGlobal::config();" this line returns the current apps config file. If you run Konsole, no problem, the current app is Konsole so it loads konsolerc.desktop file. If you run in Dolphin panel the current app is Dolphin so dolphinrc.desktop file is loaded. In this case as there is no "DefaultProfile" entry in dolphinrc it returns "Shell.profile" instead of default one.

The bug should be fixed easly. konsolePart should load konsolerc.desktop instead of current app rc file.
Comment 3 Rahman Duran 2009-03-31 10:53:23 UTC
SVN commit 947256 by rduran:

BUG: 172034

Fix konsolepart not loading "konsolerc" when it runs in kate or dolphin.



 M  +1 -1      SessionManager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=947256