BUG: 172034

Fix konsolepart not loading "konsolerc" when it runs in kate or dolphin.


svn path=/trunk/KDE/kdebase/apps/konsole/; revision=947256